Fix wide width to match editor better; add some padding/margins to left and right on full-aligned blocks that have text within.

--- a/publication/editor-blocks.css
+++ b/publication/editor-blocks.css
@@ -47,6 +47,13 @@
 	margin-right: auto;
 }
 
+.wp-block-columns.alignfull,
+.wp-block-latest-comments.alignfull,
+.editor-block-list__block[data-align="full"] .wp-block-file {
+	padding-left: 24px;
+	padding-right: 24px;
+}
+
 /* Title */
 
 .editor-post-title__block .editor-post-title__input {
